# hotcities-data

./: .env  .gitignore  README.md  config.ini  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
data/: alternatenames.fields.txt  cities.csv  cities.fields.txt  countries.fields.txt
hotcities/: city_image.py  cli.py  filters.py  flickr.py  google.py  loggers.py  mergers.py  readers.py  unsplash.py
hotcities/config/: config.ini  config.py
hotcitiesdata/: cli.py  mergers.py
hotcitiesdata/config/: __init__.py  config.py
manager/: cli.py  filter.py  filters.py  helpers.py  merge.py  mergers.py  parsers.py  readers.py
manager/config/: config.ini
notebooks/: extractor.ipynb  images.ipynb
src/: __init__.py  filter.py  helpers.py  merge.py
test/: conftest.py  test_filter.py  test_filters.py  test_helpers.py  test_merge.py  test_mergers.py  test_parsers.py  test_readers.py
test/res/: alternatenames.data.txt  alternatenamesdata.txt  cities.data.txt  cities.fields.txt  cities.txt  config.test.ini  countries.fields.txt  countries.txt  countriesHeader.txt  languagesHeader.txt
