[tool.poetry]
name = "hotcities"
version = "0.1.0"
description = ""
authors = ["Flavio Grandin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.4.1"
numpy = "^1.25.1"
pandas = "^2.0.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
black = "^23.7.0"
poethepoet = "^0.21.1"

[tool.poetry.scripts]
hotcities = "hotcities.cli:main"

[tool.poe.tasks]
test = "pytest test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

